package pattern.behavioral.observer;

/**
 * Subscriptor (observer).
 */
public interface EventListener {
    void actionPerformed(Component component);
}
